[package]
name = "osaka-dns"
version = "0.2.11"
authors = ["Arvid E. Picciani <aep@exys.org>"]
description = "async for rust without the noise"
license     = "MIT/Apache-2.0"
repository  = "https://github.com/aep/osaka"
documentation = "https://docs.rs/osaka-dns"

[dependencies]
log = "0.4.8"
osaka = "0.2.10"
#osaka = {path = "../osaka"}


[dev-dependencies]
tinylogger = "0.1"
