[package]
name = "osaka-macros"
version = "0.1.3"
authors = ["Arvid E. Picciani <aep@exys.org>"]
edition = "2018"
description = "async for rust without the noise"
license     = "MIT/Apache-2.0"
repository  = "https://github.com/aep/osaka"
documentation = "https://docs.rs/osaka"

[lib]
proc-macro = true

[dependencies]
syn         = { version = "0.15.22" , features = ["full", "extra-traits"]}
quote       = "0.6.10"
proc-macro2 = "0.4"

