[package]
name = "osaka"
version = "0.2.3"
authors = ["Arvid E. Picciani <aep@exys.org>"]
description = "async for rust without the noise"
license     = "MIT/Apache-2.0"
repository  = "https://github.com/aep/osaka"
documentation = "https://docs.rs/osaka"
readme = "../README.md"



[dependencies]
osaka-macros = "0.2"
#osaka-macros = { path ="../osaka-macros"}
mio = "0.6"
log = "0.4"
